Query String, normalisation, errors and more (see RELEASE)
